[project]
name = "mumu-gpt-image2"
description = "ComfyUI custom node for GPT Image2 text-to-image and image-to-image generation through OpenAI-compatible endpoints."
version = "0.1.1"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/mmuuai/mumu-gpt-image2"
"Bug Tracker" = "https://github.com/mmuuai/mumu-gpt-image2/issues"

[tool.comfy]
PublisherId = "mumuai"
DisplayName = "木木--GPT-Image-2"
Icon = ""
